--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <script src="index.js"></script>
   <script src="functionAndScope.js"></script>
+  <script src="ArrayAndObject.js"></script>
 </body>
 </html>
